# python-prosegrinder

./: .editorconfig  .prospector.yaml  .pylintrc  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: pypi-publish.yml  python-ci.yml  python-lint.yml  python-release.yml
bookworm/: __init__.py  dictionary.py  paragraph.py  prose.py  readabilityscores.py  sentence.py  word.py
prosegrinder/: __init__.py  __main__.py  dictionary.py  fragment.py  fragment_container.py  paragraph.py  prose.py  readability_scores.py  sentence.py  word.py
prosegrinder/bookworm/: utils.py  word.py
src/prosegrinder/: __init__.py  __main__.py  dictionary.py  fragment.py  fragment_container.py  paragraph.py  prose.py  readability_scores.py  sentence.py  word.py
tests/: test_cli.py  test_dictionary.py  test_paragraph.py  test_prose.py  test_readability_scores.py  test_readabilityscores.py  test_sentence.py  test_word.py
tests/resources/: cli-default.json  copyright.txt  shortstory.txt
