[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "prosegrinder"
version = "1.3.4"
description = "A text analytics library for prose fiction."
authors = ["David L. Day <david@davidlday.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7.2"
importlib-metadata = "^5.1.0"
cmudict = "^1.0.11"
narrative = "^1.1.1"
pointofview = "^1.0.2"
syllables = "^1.0.4"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pylint = "^2.15.8"
black = "^22.12.0"

[tool.poetry.scripts]
prosegrinder = "prosegrinder.__main__:cli"

[tool.pylint."messages control"]
disable = ["duplicate-code", "too-many-instance-attributes", "too-many-arguments"]
