[project]
name = "prosegrinder"
dynamic = ["version", "classifiers"]
description = "A text analytics library for prose fiction."
license = {text = "GPLv3"}
readme = "README.md"
requires-python = ">=3.9,<4.0"
authors = [
    {name = "David L. Day", email = "david@davidlday.com"}
]
keywords = ["text analytics", "prose fiction", "natural language processing", "NLP", "linguistics"]
dependencies = [
    "importlib-metadata>=5.1.0",
    "cmudict>=1.0.11",
    "narrative>=1.1.1",
    "pointofview>=1.0.2",
    "syllables>=1.0.4",
    "click>=8.1.3"
]

[project.scripts]
prosegrinder = "prosegrinder.__main__:cli"

[project.urls]
homepage = "https://github.com/prosegrinder/python-prosegrinder"
repository = "https://github.com/prosegrinder/python-prosegrinder"
"Bug Tracker" = "https://github.com/prosegrinder/python-prosegrinder/issues"

[tool.commitizen]
tag_format = "v$version"
update_changelog_on_bump = true
changelog_incremental = true
bump_message = "bump: $current_version → $new_version"
version_provider = "poetry"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
version = "1.4.3"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing"
]

[tool.poetry.group.dev.dependencies]
black = ">=22.12,<26.0"
mypy = "^1.19.1"
bandit = "^1.8.6"
pylint = "^3.3.9"
pytest = "^8.4.2"

[tool.pylint.'MESSAGES CONTROL']
disable = "similarities"
