[metadata]
name = prosegrinder
author = David L. Day
author_email = dday376@gmail.com
description = A text analytics library for prose fiction.
version = file: __init__.py
url = https://github.com/prosegrinder/python-prosegrinder
long_description = file: README.rst
long_description_content_type = text/x-rst
license = GPLv3
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
python_requires = >=3.4
setup_requires =
    setuptools >= 40.8
    pip >= 19
    wheel >= 0.31
install_requires =
    cmudict>=0.4.0
    narrative>=0.1.2
    pointofview>=0.3.0
    syllables>=0.1.0

[bdist_wheel]
universal = 1
