[metadata]
name = prosegrinder
version = file: src/prosegrinder/VERSION
author = David L. Day
author_email = dday376@gmail.com
description = "A text analytics library for prose fiction."
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
url = https://github.com/prosegrinder/python-prosegrinder
project_urls =
    Bug Tracker = https://github.com/prosegrinder/python-prosegrinder/issues
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
python_requires = >= 2.7
package_dir =
    = src
packages = find:
include_package_data = True
setup_requires =
    setuptools
install_requires =
    cmudict>=1.0.0
    narrative>=1.0.0
    pointofview>=1.0.0
    syllables>=1.0.0
    click>=8.0.1
build_requires =
    build
tests_requires =
    pytest

[options.packages.find]
where = src

[bdist_wheel]
universal = true

[sdist]
formats = zip, gztar
